# Talos

./: .gitattributes  .gitignore  README.md  hardware-daemon.toml
docs/: HARDWARE_DAEMON_REFERENCE.md
examples/: coordinator.js  executor.js
examples/logic/equipment/: temperature_control.js
hardware_daemon/: Cargo.toml
