[package]
name = "talos-hwdaemon"
version = "2.0.0"
edition = "2021"
authors = ["Andrew Jewell Sr <andrew@automatanexus.com>", "AutomataNexus, LLC"]
description = "Talos — Rust-based I2C hardware daemon for Sequent Microsystems HATs on Raspberry Pi"
license = "Proprietary"
repository = "https://github.com/AutomataNexus/Talos"
homepage = "https://github.com/AutomataNexus/Talos"
documentation = "https://github.com/AutomataNexus/Talos/blob/main/HARDWARE_DAEMON_REFERENCE.md"
readme = "README.md"
keywords = ["i2c", "raspberry-pi", "hardware", "hvac", "sequent-microsystems"]
categories = ["embedded", "hardware-support", "api-bindings"]
rust-version = "1.70"
publish = false

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "sync"] }

# HTTP framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.8"

# I2C communication (Raspberry Pi)
rppal = "0.18"

# Concurrency
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# HTTP client (for Aegis-DB metrics reporting)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
strip = true

[[bin]]
name = "nexusedge-hardware-daemon"
path = "src/main.rs"
